[gd_scene load_steps=2 format=3 uid="uid://tcypt7d8a4u2"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_cw4w2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cw4w2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.140157, 0.110531, 0.266054, 1)
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -206.0
offset_right = 260.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0.219608, 0.470588, 1)
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 7.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.339039, 0.284473, 0.582375, 1)
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = -98.0
offset_right = -56.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 70
alignment = 1

[node name="BtnAccept" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="BtnCancel" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 12.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer2"]
custom_minimum_size = Vector2(50, 36)
layout_mode = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 25
text = "Width:"
horizontal_alignment = 1

[node name="TextWidth" type="TextEdit" parent="Panel/HBoxContainer2"]
custom_minimum_size = Vector2(70, 38)
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "32 px"
caret_blink = true

[node name="Label2" type="Label" parent="Panel/HBoxContainer2"]
custom_minimum_size = Vector2(50, 36)
layout_mode = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 25
text = "Height:"
horizontal_alignment = 1

[node name="TextHeight" type="TextEdit" parent="Panel/HBoxContainer2"]
custom_minimum_size = Vector2(70, 38)
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "32 px"
caret_blink = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 33.0
offset_top = 144.0
offset_right = -33.0
offset_bottom = 183.0
grow_horizontal = 2
theme_override_constants/separation = -55
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEditName" type="TextEdit" parent="Panel/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name of Project"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 56
text = "New Project"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/HBoxContainer/BtnAccept" to="." method="_on_btn_accept_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/BtnCancel" to="." method="_on_btn_cancel_pressed"]
[connection signal="text_changed" from="Panel/HBoxContainer2/TextWidth" to="." method="_on_text_width_text_changed"]
[connection signal="text_changed" from="Panel/HBoxContainer2/TextHeight" to="." method="_on_text_height_text_changed"]
